Issue number: 15691 - remove current issue type concept Modified Files: * src/conf/Scarab.properties - removed properties for XModuleList.vm   and ModuleQuery.vm and added them for IssueTypeList.vm * src/i18n/ScarabBundle_en_US.properties -   Added keys: IssueTypeList.vm.Title, EnterNewIssue, EnterNewBriefInstructions,   AdvancedQuery, CustomQuery, IssueTypeListMoreThanOne, NoIssueTypeList,   IssueTypesInModuleAndSavedLists, AllIssueTypesInModule, StartListFromSaved,   SavedListsOfIssueTypes, NoSavedIssueTypeLists, PreviouslySelectedIssueTypes,   OtherModuleIssuesInDomain, CurrentModuleTypesIntro, NewQuery,   NewQueryWithNewIssueTypes, TemplateListBriefInstructions   Modified keys: ToQuery, SelectSaveXModuleQuery, SelectSaveXModuleReport   Removed keys: home/ModuleQuery.vm.Title, home/XModuleList.vm.Title,   EnterNew, IssueTypesInModule, AllIssueTypes, BuildListOfIssueTypes,   UsePreviouslySavedList, ModuleIssuesInDomain, NewModuleQuery, Custom,   NewModuleQuery * src/java/org/tigris/scarab/actions/ConfigureIssueList.java - doSave:   add alert in the event the mitlist is null (this should not happen) * src/java/org/tigris/scarab/actions/ConfigureReport.java - doCreatenew:   if a mitlist (list of module/issue types) is available start on Info.vm   otherwise reports,XModuleList.vm * src/java/org/tigris/scarab/actions/DefineXModuleList.java - complete   refactoring to handle the main task of ModuleQuery action which is removed.   Also to support a quick issue type selection then going directly to   query/report without having to build up the list first.  Added a stub   method to allow removing previously saved lists, but its not implemented. * src/java/org/tigris/scarab/actions/QueryList.java - doSave():   remove variable that wasn't used.   doGotoadvancedquery: go to whichever query template is most appropriate   (might want to change the method name) * src/java/org/tigris/scarab/actions/ReportIssue.java - account for   scarabR.getNextEntryTemplate signature change.  

--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -41,9 +41,9 @@ document.write('<link rel="stylesheet" type="text/css" href="$staticLink.setPath
    #end
    <div>
     #if ($data.User.hasLoggedIn())
-    $link.omitModule().omitIssueType().setPage("Login.vm").setAction("Logout").setLabel("$l10n.Logout")
+    $link.omitModule().setPage("Login.vm").setAction("Logout").setLabel("$l10n.Logout")
     #else
-    $link.omitModule().omitIssueType().setPage("Login.vm").setLabel("$l10n.Login")
+    $link.omitModule().setPage("Login.vm").setLabel("$l10n.Login")
     #end
    </div>
   </div>
