--- a/src/templates/navigations/CommonLinks.vm
+++ b/src/templates/navigations/CommonLinks.vm
@@ -1,8 +1,19 @@
-#if ($data.User.CurrentRModuleIssueType)
   #set ($module = $scarabR.CurrentModule)
   #if ($module.allowsNewIssues())
-    #set ($rmit = $data.User.CurrentRModuleIssueType)
-    <div>$link.setPage("$scarabR.NextEntryTemplate").setLabel("$l10n.format('EnterNewIssueType', $rmit.DisplayName.toLowerCase())")</div>
+    <div>$link.setPage("home,EnterNew.vm").setLabel($l10n.EnterNewIssue).addPathInfo("eventSubmit_doStart", "foo").setAction("ReportIssue")</div>
+    #set ($lastEntered = $data.User.lastEnteredIssueTypeOrTemplate())
+    #if ($lastEntered)
+      #if ($lastEntered.isTemplate())
+        #set ($value = $lastEntered.IssueId)
+        #set ($parameterKey = "templateId")
+        #set ($issueType = $lastEntered.IssueType.IssueTypeForTemplateType)
+      #else
+        #set ($value = $lastEntered.IssueTypeId)
+        #set ($parameterKey = "curit")
+        #set ($issueType = $lastEntered)
+      #end
+    <div>$link.setPage($scarabR.getNextEntryTemplate($issueType)).setLabel("$l10n.format('EnterNewIssueType', $module.getRModuleIssueType($issueType).DisplayName.toLowerCase())").addPathInfo($parameterKey, $value).addPathInfo("eventSubmit_doStart", "foo").setAction("ReportIssue")</div>
+    #end
   #end
   #if (!$module.isGlobalModule())
     <div>$link.setPage("QueryList.vm").setLabel("$l10n.Queries")</div>
@@ -11,4 +22,3 @@
     #end
     <div>$link.setPage("reports,ReportList.vm").setLabel("$l10n.Reports")</div>
   #end
-#end
