--- a/src/templates/screens/IssueTypeList.vm
+++ b/src/templates/screens/IssueTypeList.vm
@@ -1,19 +1,6 @@
 #set ($user = $data.User)
+$user.setHomePage("query")
 <div class="app" id="xmodulelist">
-
-<div class="tabs">
-  <table cellpadding="3" cellspacing="0" border="0">
-    <tr>
-   #if ($link.setPage("home,ModuleQuery.vm").setAction("SetHomePage").isAllowed())
-    <td><a href="$link">$l10n.ModuleQuery</a></td>
-   #end
-   #if ($link.setPage("home,EnterNew.vm").setAction("SetHomePage").isAllowed())
-      <td><a href="$link">$l10n.EnterNew$l10n.Dots</a></td>
-   #end
-	<th>$l10n.BuildXModuleQuery</th>
-	</tr>
-  </table>
-</div>
 
 #if ($user.hasAnySearchableRMITs())
 
@@ -28,23 +15,24 @@
  <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" 
      value="AdvancedQuery.vm" />
 
-#createMITList("Finished" $l10n.DefineQuery $user "home,XModuleList.vm" $l10n.SelectSaveXModuleQuery)
+#createMITList("Finished" $l10n.DefineQuery $user "IssueTypeList.vm" $l10n.SelectSaveXModuleQuery)
 
 #set ($mitList = $user.CurrentMITList)
 #if (!$mitList || $mitList.isEmpty())
  <h3>$l10n.PredefinedLists</h3>
  #set($manager = $scarabG.MITListManager)
  #set($key = "pd_list_id")
- #set($checked2 = "oneitallmods" == $data.Parameters.getString($key, ""))
- #set($checked = !$checked2 || "allmits" == $data.Parameters.getString($key, ""))
+ #set($checked = !$data.Parameters.getString($key, "").startsWith("oneitallmods"))
  <div class="colbar">
    <p>$l10n.ChoosePredefinedList</p>
    <p><input type="radio" name="$key" value="allmits"
-     #if($checked) checked="checked"#end />$l10n.AllModulesAndIssueTypes</p>
-   #if ($scarabR.CurrentIssueType)
-   <p><input type="radio" name="$key" value="oneitallmods"
-         #set ($issueTypeName = $scarabR.CurrentIssueType.getDisplayName($module))
-     #if($checked2) checked="checked"#end />$l10n.format("CurrentIssueTypeAllModules", "$issueTypeName")</p>
+   #if($checked) checked="checked"#end />$l10n.AllModulesAndIssueTypes</p>
+
+   #foreach ($issueType in $user.CurrentModule.getIssueTypes(false))
+    #set ($issueTypeName = $issueType.getDisplayName($module))
+    #set ($value = "oneitallmods_$issueType.QueryKey")
+    #set ($checked = $data.Parameters.getString($key, "") == $value)
+    <p><input type="radio" name="$key" value="$value"#if($checked) checked="checked"#end />$l10n.format("CurrentIssueTypeAllModules", "$issueTypeName")</p>
    #end
  </div>
 
