--- a/src/templates/screens/entry/Wizard1.vm
+++ b/src/templates/screens/entry/Wizard1.vm
@@ -1,13 +1,10 @@
 #set ($issue = $scarabR.ReportingIssue)
-#set ($issueType = $scarabR.CurrentIssueType)
 
 <div id="wizard1" class="app">
 <form method="post" action="$link.setPage("entry,Wizard1.vm").setAction("ReportIssue")">
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="entry,Wizard3.vm" />
 
-<input type="hidden" name="issueType" value="$scarabR.CurrentRModuleIssueType.IssueType.IssueTypeId" />
-
-#set ($moduleAttributeGroups = $issue.Module.getDedupeGroupsWithAttributes($issueType))
+#set ($moduleAttributeGroups = $issue.Module.getDedupeGroupsWithAttributes($issue.IssueType))
 #entryTemplateAndAttributes ($issue $moduleAttributeGroups $l10n.Next "eventSubmit_doCheckforduplicates" true)
 
 #if ($moduleAttributeGroups.size() > 0)
