--- a/src/templates/screens/help/UserIssueTemplates.vm
+++ b/src/templates/screens/help/UserIssueTemplates.vm
@@ -38,12 +38,12 @@
     <li>$l10n.FromThe <em>$l10n.TemplateList</em> $l10n.ScreenClickThe <strong>$l10n.CreateNew</strong> $l10n.Button.</li>
     <li>$l10n.UITP6 </li>
     <li>$l10n.UITP7</li>
-    <li>$l10n.UITP8<strong> $l10n.EnterNew</strong> 
+    <li>$l10n.UITP8<strong> $l10n.EnterNewIssue</strong> 
       $l10n.screen. </li>
     <li>$l10n.ClickThe <strong>$l10n.Done</strong> $l10n.UITP9</li>
   </ol>
   <h3><strong><a name="using" id="using">$l10n.UsingTemplates</a></strong></h3>
-  <p>$l10n.UITP10S1<strong>$l10n.EnterNew</strong> $l10n.UITP10S2<strong>$l10n.Select</strong> $l10n.UITP10S3<em>$l10n.ViewAllTemplates</em> $l10n.UITP10S4<strong>$l10n.Done</strong> $l10n.UITP10S5</p>
+  <p>$l10n.UITP10S1<strong>$l10n.EnterNewIssue</strong> $l10n.UITP10S2<strong>$l10n.Select</strong> $l10n.UITP10S3<em>$l10n.ViewAllTemplates</em> $l10n.UITP10S4<strong>$l10n.Done</strong> $l10n.UITP10S5</p>
  
 <div class="courtesylinks"><p><a href="#toc">$l10n.Top</a></div> 
   
