--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -1,7 +1,7 @@
 #set ($module = $scarabR.CurrentModule)
-#set ($issueType = $scarabR.CurrentIssueType)
 #set ($templateId = $data.Parameters.getString("templateId"))
 #set ($currentTemplate = $scarabR.getIssueTemplate())
+#set ($issueType = $currentTemplate.IssueType.IssueTypeForTemplateType)
 #set ($templateInfo = $scarabR.IssueTemplateInfo)
 #set ($templateGroup = $intake.IssueTemplateInfo.mapTo($templateInfo))
 #set ($issueGroup = $intake.Issue.mapTo($currentTemplate))
@@ -13,6 +13,7 @@
 <form method="post" action="$link.setPage("SaveTemplate.vm").setAction("TemplateList")">
 <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="TemplateList.vm" />
 <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="TemplateList.vm" />
+<input type="hidden" name="$scarabG.Constant.CURRENT_ISSUE_TYPE" value="$issueType.QueryKey" />
 
 #if ($templateId && $templateInfo && !$templateInfo.canEdit($data.User))
 <p class="infomark"><em>$l10n.CannotEditTemplate</em></p>
